@@ -1,3 +1,6 @@
+2009-06-21
+- play with some code for vertical panel
+
 2009-06-20
 - remove flickering on systray
 
